# guava

./: .env.example  CLAUDE.md  DEMO_SCRIPT.md  OVERVIEW.md  README.md  buidl.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/models/: metrics.rs  proof.rs  statement.rs  transaction.rs
backend/src/routes/: applications.rs  auth.rs  loans.rs  metrics.rs  mod.rs  proofs.rs  statements.rs
backend/src/services/: classifier.rs  loan_engine.rs  metrics.rs  mod.rs  proof_gen.rs  soroban.rs
backend/src/services/parser/: xls.rs
circuits/lending/: Nargo.toml
circuits/lending/src/: main.nr
contracts/lending_verifier/: Cargo.toml
contracts/lending_verifier/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/borrower/: page.tsx
frontend/src/app/lender/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/merchant/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/lib/: api.ts  types.ts
memory/: MEMORY.md  project_guava.md
