[package]
name = "guava-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
tempfile = "3"
calamine = { version = "0.26", features = ["dates"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
